--- a/questoes.html
+++ b/questoes.html
@@ -8,7 +8,7 @@
   <title>Resolução</title>
 </head>
 <body>
-  <h1>display: flex;</h1>
+  <h1>Questões</h1>
 <section class="container flex">
 	<a href="./questao2.html"><div class="item">Questão 2</div></a>
 	<a href="./questao3.html"><div class="item">Questão 3</div></a>
